--- a/bin/vztmpl-dl.in
+++ b/bin/vztmpl-dl.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-#  Copyright (C) 2011-2012, Parallels, Inc. All rights reserved.
+#  Copyright (C) 2011-2013, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -66,7 +66,7 @@ usage()
 {
 	cat << =EOF= 1>&2
 Usage:
-  $SELF [option ...] template [template ...]
+  $SELF [option ...] <template> [<template> ...]
   $SELF --list-remove | --list-local | --list-all
   $SELF --config | --help
 Options:
@@ -80,7 +80,7 @@ Options:
   --config		Output current configuration
   --help		Print this help
 Arguments:
-  template		An OS template name (like centos-6-x86_64)
+  <template>		An OS template name (like centos-6-x86_64)
 =EOF=
 	exit $1
 }
