vztmpl-dl: fix a bashism in list_local
Unfortunately we can't use {} construct.

Reported by checkbashisms. Introduced in commit 2a25f12.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vztmpl-dl.in
+++ b/bin/vztmpl-dl.in
@@ -155,8 +155,9 @@ list_remote()
 
 list_local()
 {
-	ls ${TCACHEDIR}/*.tar{,.gz,.xz,.bz2} 2>/dev/null |
-		  sed -e "s#^${TCACHEDIR}/##" -e 's#\.tar\.*[gbxz2]*$##'
+	ls ${TCACHEDIR}/*.tar    ${TCACHEDIR}/*.tar.gz  \
+	   ${TCACHEDIR}/*.tar.xz ${TCACHEDIR}/*.tar.bz2	2>/dev/null |
+		sed -e "s#^${TCACHEDIR}/##" -e 's#\.tar\.*[gbxz2]*$##'
 }
 
 # Parse arguments
