vzdaemon_stop(): don't return error if stopped already
According to Debian policy
(http://www.debian.org/doc/debian-policy/ch-opersys.html#s-writing-init)

> The init.d scripts must ensure that they will behave sensibly
> (i.e. returning success and not starting multiple copies of a service) if
> invoked with start when the service is already running, or with stop
> when it isn't

Our stop script didn't do that, i.e. it returned 1 if a service is
already stopped.

Fix it by adding --oknodo to start-stop-daemon

Reported-by: Ola Lundqvist <ola@inguza.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/initd-functions.in
+++ b/etc/init.d/initd-functions.in
@@ -116,7 +116,8 @@ vzdaemon_stop()
 	   debian)
 		local p=$1
 		shift
-		start-stop-daemon --stop --quiet --exec @SBINDIR@/$p -- $*
+		start-stop-daemon --stop --quiet --oknodo \
+			--exec @SBINDIR@/$p -- $*
 		;;
 	esac
 }
