vz-postinstall: be verbose about what we do
Add output of what we're changing. Add grep to skip changing if the
value is already the way we want it to be.

First run:
vz-postinstall: /etc/sysconfig/selinux: set SELINUX = disabled
vz-postinstall: /etc/sysctl.conf: set net.ipv4.ip_forward = 1
vz-postinstall: /etc/sysctl.conf: add net.ipv4.conf.default.proxy_arp = 0
vz-postinstall: /etc/sysctl.conf: set kernel.sysrq = 1
vz-postinstall: /etc/sysctl.conf: add net.ipv4.conf.default.send_redirects = 1
vz-postinstall: /etc/sysctl.conf: add net.ipv4.conf.all.send_redirects = 0
vz-postinstall: /etc/sysctl.conf: set net.bridge.bridge-nf-call-ip6tables = 1
vz-postinstall: /etc/sysctl.conf: add net.bridge.bridge-nf-call-iptables = 1

Second run:
(no output)

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vz-postinstall.in
+++ b/scripts/vz-postinstall.in
@@ -37,7 +37,9 @@ change_param()
 
 	# Check if param is there
 	if grep -q "^[ \t]*${p}[ \t]*=.*" $file; then
+		grep -q "^[ \t]*${p}[ \t]*=[ \t]*${v}$" $file && return
 		# Replace the value
+		echo "vz-postinstall: $file: set $p = $v"
 		sed -i -e \
 			"s/^\([ \t]*${p}[ \t]*=[ \t]*\).*\$/\1${v}/" \
 			$file
@@ -45,6 +47,7 @@ change_param()
 		# If EOL is missing at the last line, fix
 		sed -i -e '$q' $file
 		# Add param
+		echo "vz-postinstall: $file: add $p = $v"
 		echo "${p}=${v}" >> $file
 	fi
 }
