libvzchown: link to -ldl
Got error from our post build checks:

verify-elf: ERROR: ./usr/lib64/libvzchown-1.0.so: undefined symbol:
dlerror

https://bugzilla.openvz.org/2705

--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -78,6 +78,7 @@ libvzctl_la_SOURCES += cgroup.c hooks_ct.c
 lib_LTLIBRARIES += libvzchown.la
 libvzchown_la_SOURCES = chown_preload.c
 libvzchown_la_LDFLAGS = -release 1.0
+libvzchown_la_LIBADD = $(DL_LIBS)
 endif
 
 if HAVE_VZ_KERNEL
