--- a/etc/download.conf
+++ b/etc/download.conf
@@ -9,6 +9,9 @@
 # http://wiki.openvz.org/Package_signatures#Importing_the_public_key
 #CHECK_TEMPLATE_SIG="yes"
 
+# Uncomment to make the script more quiet (default is "no").
+#QUIET="yes"
+
 # Uncomment and set to location of your favorite mirror
 #TMPL_REPO_PREFIX="http://download.openvz.org/template/precreated"
 
