arch.conf: add POST_CREATE
Not sure why it was not there before.

https://bugzilla.openvz.org/2731

Reported-by: Jaroslav Marák <vpspodpora@gmail.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/dists/arch.conf
+++ b/etc/dists/arch.conf
@@ -24,3 +24,4 @@ SET_HOSTNAME=arch-set_hostname.sh
 SET_DNS=set_dns.sh
 SET_USERPASS=set_userpass.sh
 SET_UGID_QUOTA=arch-set_ugid_quota.sh
+POST_CREATE=postcreate.sh
