--- a/configure.ac
+++ b/configure.ac
@@ -40,9 +40,15 @@ AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
 
-# If we are on an x86_64, libraries should go to lib64.
+# If we are on an x86_64, redefine libdir from default value
 if test "$target_cpu" = "x86_64" -a "$libdir" = '${exec_prefix}/lib'; then
-	libdir='${exec_prefix}/lib64'
+	if debarch=$(dpkg-architecture -qDEB_HOST_MULTIARCH 2>/dev/null); then
+		# Debian/Ubuntu
+		libdir='${exec_prefix}/'$debarch
+	else
+		# Assume Red Hat/SUSE: libs go to lib64
+		libdir='${exec_prefix}/lib64'
+	fi
 fi
 
 # Automake
