man/Makefile: use AM_V_GEN
To be in line with "silent make" stuff.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -49,7 +49,7 @@ GROFF_HTML_OPTS=-Thtml -t -man -msafer
 EXTRA_DIST = $(SRCS) toc.man.in toc.sh html2wiki.sh macros.tmac
 
 %: %.in macros.tmac
-	cat $(srcdir)/macros.tmac $< > $@
+	$(AM_V_GEN)cat $(srcdir)/macros.tmac $< > $@
 
 check-man-dates:
 	for FILE in $(SRCS); do \
