--- a/man/ctid.conf.5.in
+++ b/man/ctid.conf.5.in
@@ -1,4 +1,4 @@
-.TH ctid.conf 5 "13 May 2013" "OpenVZ" "Containers"
+.TH ctid.conf 5 "1 Oct 2013" "OpenVZ" "Containers"
 .SH NAME
 \fIctid\fR.conf \- configuration file for an OpenVZ container.
 .SH SYNOPSIS
@@ -90,6 +90,8 @@ Corresponds to the \fB--numiptent\fR option.
 Corresponds to the \fB--physpages\fR or \fB--ram\fR option.
 .IP \fBSWAPPAGES\fR
 Corresponds to the \fB--swappages\fR or \fB--swap\fR option.
+.IP \fBVM_OVERCOMMIT\fR
+Corresponds to the \fB--vm_overcommit\fR option.
 .IP \fBCPUUNITS\fR
 Corresponds to the \fB--cpuunits\fR option.
 .IP \fBDISK_QUOTA\fR="\fByes\fR|\fBno\fR"
