vz-postinstall: don't add bridge params to sysctl.conf
This enhances commit a7aaea0. Since the default for these
net.bridge.bridge-nf-call-* parameters are 1, it doesn't make
sense to add those, we only need to change them to 1 if they
are there and set to 0 (RHEL case).

This should fix the following error message for distros that do not
load bridge by default:

	# sysctl -p
	error: "net.bridge.bridge-nf-call-ip6tables" is an unknown key
	error: "net.bridge.bridge-nf-call-iptables" is an unknown key

https://bugzilla.openvz.org/2743

Reported-by: poiuty <poiuty@lepus.su>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vz-postinstall.in
+++ b/scripts/vz-postinstall.in
@@ -29,6 +29,7 @@ check_file()
 # $1: file name
 # $2: parameter name
 # $3: new parameter value
+# $4: optional 'noadd' if you don't want to add a non-existing parameter
 change_param()
 {
 	local file=$1 p=$2 v=$3
@@ -43,7 +44,7 @@ change_param()
 		sed -i -e \
 			"s/^\([ \t]*${p}[ \t]*=[ \t]*\).*\$/\1${v}/" \
 			$file
-	else # Add the param
+	elif "x$4" != 'xnoadd'; then  # Add the param
 		# If EOL is missing at the last line, fix
 		sed -i -e '$q' $file
 		# Add param
@@ -64,8 +65,8 @@ tune_sysctl()
 	change_param $file net.ipv4.conf.default.send_redirects	1
 	change_param $file net.ipv4.conf.all.send_redirects	0
 # https://bugzilla.openvz.org/2641
-	change_param $file net.bridge.bridge-nf-call-ip6tables	1
-	change_param $file net.bridge.bridge-nf-call-iptables	1
+	change_param $file net.bridge.bridge-nf-call-ip6tables	1 noadd
+	change_param $file net.bridge.bridge-nf-call-iptables	1 noadd
 	sysctl -q -p 2>/dev/null
 }
 
