Revert "init.d/vzevent-redhat: support for RHEL4"
There is no need to support RHEL4 kernel anymore, it was
frozen in November 2012.

This reverts commit 7d4c629f810fdb047298a1db442f0dff5c7adcb2.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vzeventd-redhat.in
+++ b/etc/init.d/vzeventd-redhat.in
@@ -32,14 +32,15 @@ load_module() {
 }
 
 check() {
+	local param=/sys/module/vzevent/parameters/reboot_event
+
 	__echo "Checking vzevent kernel module ..."
 
 	if ! lsmod | fgrep -qw vzevent; then
 		print_failure
 		return 1
 	fi
-	if ! cat /sys/module/vzevent/{,parameters/}reboot_event 2>/dev/null | \
-			fgrep -qw 1; then
+	if ! cat $param | fgrep -qw 1; then
 		print_failure
 		print_warning "vzevent module should be loaded with reboot_event=1 parameter"
 		echo
