--- a/bin/vzubc.in
+++ b/bin/vzubc.in
@@ -153,12 +153,12 @@ done
 
 # Sanity checks
 if test -n "$watch" -a -n "$color"; then
-	echo "Error: can't use --watch and --color together"
+	echo "Error: can't use --watch and --color together" 1>&2
 	usage 1
 fi
 
 if test -n "$thr" -a -z "$color" -a -z "$quiet"; then
-	echo "Error: -qh and -qm only make sense with --quiet or --color"
+	echo "Error: -qh and -qm only make sense with --quiet or --color" 1>&2
 	usage 1
 fi
 
