vzlist(8): fix subsection reference
It is named "Possible fields" not "Standard fields".

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzlist.8.in
+++ b/man/vzlist.8.in
@@ -47,7 +47,7 @@ Suppress trimming long fields. Usable for scripts.
 .IP "\fB-j\fR, \fB--json\fR"
 Output in JSON format. By default, all possible fields are printed.
 .IP "\fB-o\fR, \fB--output\fR \fIfield\fR[,\fIfield\fR...]"
-Display only the specified \fIfield\fRs (see \fBStandard fields\fR
+Display only the specified \fIfield\fRs (see \fBPossible fields\fR
 subsection below).
 .IP \fB-1\fR
 Synonym for \fB-H -octid\fR, i.e. only show container IDs, one per line.
