vzevent-stop: check for suspend/chkpnt
This script check if the stop event was caused by vzctl
and exits in case it's so. Apparently, stop even can be
caused not only by vzctl stop and vzctl restart, but also
vzctl suspend and vzctl chkpnt, so let's check for those
as well.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vzevent-stop.in
+++ b/scripts/vzevent-stop.in
@@ -40,7 +40,8 @@ clear_ve_net()
 }
 
 # If vzctl stop is running -- let it finish the job
-ps -o cmd= -C vzctl 2>/dev/null | egrep -qw "(stop|restart) $VEID" && exit 0
+ps -o cmd= -C vzctl 2>/dev/null | \
+	egrep -qw "(stop|restart|chkpnt|suspend) $VEID" && exit 0
 
 I=1
 while vzctl --quiet status $VEID | fgrep -w running; do
