Add iolimit and iopslimit
This patch adds iolimit and iopslimit support. This functionality
is available for OpenVZ since kernel 2.6.32-042stab084.2.

Work was sponsored by GleSYS Internet Services AB (http://glesys.se/)
via a feature request form available at bit.ly/YtWwWN

* vzctl set: add --iolimit and --iopslimit
* bash_completion: add appropriate completions
* vzlist: add appropriate new fields
* vzctl(8): describe new options
* etc/init.d/vz*: add vziolimit module loading

Reported-by: GleSYS Support <support@glesys.se>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -88,7 +88,8 @@ _vzctl()
 		--diskquota --mount_opts \
 		--diskspace --diskinodes --quotatime --quotaugidlimit \
 		--capability --devnodes --devices --applyconfig \
-		--name --ioprio --setmode --meminfo --bootorder --features \
+		--name --ioprio --iolimit --iopslimit \
+		--setmode --meminfo --bootorder --features \
 		--reset_ub --stop-timeout"
 	local vzctl_start_opts="--wait --force --skip-fsck"
 	local vzctl_stop_opts="--fast --skip-umount"
