--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -30,6 +30,7 @@ check_config() {
 		: ${MIGRATE_MODULES:="vzcpt vzrst"}
 		: ${NET_MODULES:="vznetdev vznet vzethdev"}
 		: ${PLOOP_MODULES:="ploop pfmt_ploop1 pfmt_raw pio_direct pio_nfs"}
+		: ${MISC_MODULES:="vziolimit"}
 
 		# check if you should load vzwdog module
 		[ "${VZWDOG}" = "yes" ] && MODULES="${MODULES} vzwdog"
@@ -319,7 +320,7 @@ start() {
 		fi
 	done
 
-	for mod in ${MIGRATE_MODULES} ${PLOOP_MODULES}; do
+	for mod in ${MIGRATE_MODULES} ${PLOOP_MODULES} ${MISC_MODULES}; do
 		modprobe ${mod} >/dev/null 2>&1
 	done
 	eend
@@ -366,7 +367,7 @@ stop() {
 	umount_cgroups
 	stop_net
 
-	for mod in ${MIGRATE_MODULES} ${PLOOP_MODULES}; do
+	for mod in ${MIGRATE_MODULES} ${PLOOP_MODULES} ${MISC_MODULES}; do
 		modprobe -r ${mod} > /dev/null 2>&1
 	done
 
