--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -57,7 +57,7 @@ if [ "${MODULES_DISABLED}" != "yes" ]; then
 	PRELOAD_MODULES="af_packet"
 	MODULES="vzmon vzdquota vzdev"
 	CPT_MODULES="vzcpt vzrst"
-	MODULES_OTHER="vzcompat ${CPT_MODULES}"
+	MODULES_OTHER="vzcompat vziolimit ${CPT_MODULES}"
 	VNET_MODULES="vznetdev vznet"
 	VETH_MODULES="vzethdev"
 	NET_MODULES="${VNET_MODULES} ${VETH_MODULES}"
